versioned_docs/version-5.0/studio/database/indexes/create-multi-map-index.mdx
---
title: "Create Multi-Map Index"
hide_table_of_contents: true
sidebar_label: Create Multi Map Index
sidebar_position: 3
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Create Multi-Map Index
<Admonition type="note" title="Note">

* A **Multi-Map index** allows to index data from _multiple_ different collections.  

* RavenDB will generate a _single_ Multi-Map index.  
  The results of querying the Multi-Map index will include data from _all_ these collections.  

* Multi-Map indexes require that all the Map functions defined have the _same_ output structure.  

* In this page:  
  * [Creating Multi-Map index](../../../studio/database/indexes/create-map-index.mdx#edit-index-view)  
</Admonition>
## Creating Multi-Map index

**Define a Map Function:**  
![Figure 1. Initial Map Function](./assets/create-multi-map-index-1.png)  

1. **Index Name** - An index name can be composed of letters, digits, `.`, `/`, `-`, and `_`. The name must be unique in the scope of the database.  
   * Uniqueness is evaluated in a _case-insensitive_ way - you can't create indexes named both `usersbyname` and `UsersByName`.  
   * The characters `_` and `/` are treated as equivalent - you can't create indexes named both `users/byname` and `users_byname`.  
   * If the index name contains the character `.`, it must have some other character on _both sides_ to be valid. `/./` is a valid index name, but 
   `./`, `/.`, and `/../` are all invalid.  

2. The **Map Function**

3. Add another map function to create a multi-map index.

<Admonition type="note" title="Note">

The `Collection` field indexed in the above example is not mandatory but can be useful upon querying.
</Admonition>



**Add another Map Function:**  
![Figure 2. Add Another Map Function](./assets/create-multi-map-index-2.png)  

<Admonition type="note" title="Note">

* Any number of additional Map functions can be added.  

* Each added Map should have the **same** output fields.  
  i.e. In the above example, the common indexed fields are: `Name` & `Collection`.  

* So when querying on this Multi-Map index, results will come from **both** Employees collection and Companies collection.  

* [Index field options](../../../studio/database/indexes/create-map-index.mdx#index-field-options), 
  [Configuration](../../../studio/database/indexes/create-map-index.mdx#configuration) & 
  [Additional Sources](../../../studio/database/indexes/create-map-index.mdx#additional-sources) 
  can be defined for the Multi-Map index in the same way as done for a [Simple Map Index](../../../studio/database/indexes/create-map-index.mdx#create-multi-map-index).  
</Admonition>



